# force_a2dp

./: Cargo.toml  LICENSE-MIT  README.md
src/: args.rs  main.rs  pacmd.rs  parser.rs
tests/: input.rs
